--- a/.gitignore
+++ b/.gitignore
@@ -1,89 +1,93 @@
+selfcheck.ini
+
+
+# TEMPLATE FROM GITHUB
 # Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
+##__pycache__/
+##*.py[cod]
+##*$py.class
 
 # C extensions
-*.so
+##*.so
 
 # Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
+##.Python
+##env/
+##build/
+##develop-eggs/
+##dist/
+##downloads/
+##eggs/
+##.eggs/
+##lib/
+##lib64/
+##parts/
+##sdist/
+##var/
+##*.egg-info/
+##.installed.cfg
+##*.egg
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
+##*.manifest
+##*.spec
 
 # Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
+##pip-log.txt
+##pip-delete-this-directory.txt
 
 # Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
+##htmlcov/
+##.tox/
+##.coverage
+##.coverage.*
+##.cache
+##nosetests.xml
+##coverage.xml
+##*,cover
+##.hypothesis/
 
 # Translations
-*.mo
-*.pot
+##*.mo
+##*.pot
 
 # Django stuff:
-*.log
-local_settings.py
+##*.log
+##local_settings.py
 
 # Flask stuff:
-instance/
-.webassets-cache
+##instance/
+##.webassets-cache
 
 # Scrapy stuff:
-.scrapy
+##.scrapy
 
 # Sphinx documentation
-docs/_build/
+##docs/_build/
 
 # PyBuilder
-target/
+##target/
 
 # IPython Notebook
-.ipynb_checkpoints
+##.ipynb_checkpoints
 
 # pyenv
-.python-version
+##.python-version
 
 # celery beat schedule file
-celerybeat-schedule
+##celerybeat-schedule
 
 # dotenv
-.env
+##.env
 
 # virtualenv
-venv/
-ENV/
+##venv/
+##ENV/
 
 # Spyder project settings
-.spyderproject
+##.spyderproject
 
 # Rope project settings
-.ropeproject
+##.ropeproject
